--- a/index.html
+++ b/index.html
@@ -42,12 +42,29 @@
             font-size: 15px;
             color: #0000008c;
         }
-
+        .quantity-container{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         .product-price {
             font-size: 30px;
             font-weight: bold;
+        }     
+        .quantity-btn-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
+        .quantity-img {
+            width: 35px;
+            cursor: pointer;
+        }
+        .quantity-text{
+            font-size: 30px;
+            padding: 0 10px;
+        }
         .btn-buy {
             background-image: linear-gradient(135deg, #F761A1 10%, #8C1BAB 100%);
             color: #fff;
@@ -71,7 +88,14 @@
                 Impecgear Unisex, Sports, Black Duffle, Gym Bag. Tough yet lightweight, Built of 600D Polyester W/ Heavy
                 vinyl Backing.
             </p>
-            <span class="product-price">₹ 450 </span>
+            <div class="quantity-container">
+                <span class="product-price">₹ 450 </span>
+               <div class="quantity-btn-container">
+                <img src="./png/minus.png" class="quantity-img" />
+                <span class="quantity-text">1</span>
+                <img src="./png/plus.png" class="quantity-img" />
+               </div>
+            </div>
         </div>
         <button type="button" class="btn-buy">Buy Now</button>
 
