--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,16 +41,19 @@
             font-size: 15px;
             color: #0000008c;
         }
-        .quantity-container{
+
+        .quantity-container {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+
         .product-price {
             font-size: 30px;
             font-weight: bold;
-        }     
-        .quantity-btn-container{
+        }
+
+        .quantity-btn-container {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -61,10 +63,16 @@
             width: 35px;
             cursor: pointer;
         }
-        .quantity-text{
+
+        .quantity-text {
             font-size: 30px;
             padding: 0 10px;
         }
+
+        .quantity-total {
+            font-size: 18px;
+        }
+
         .btn-buy {
             background-image: linear-gradient(135deg, #F761A1 10%, #8C1BAB 100%);
             color: #fff;
@@ -89,17 +97,51 @@
                 vinyl Backing.
             </p>
             <div class="quantity-container">
-                <span class="product-price">₹ 450 </span>
-               <div class="quantity-btn-container">
-                <img src="./png/minus.png" class="quantity-img" />
-                <span class="quantity-text">1</span>
-                <img src="./png/plus.png" class="quantity-img" />
-               </div>
+                <span class="product-price" id="product-price">₹ 450 </span>
+                <div class="quantity-btn-container">
+                    <img src="./png/minus.png" class="quantity-img" onclick="decrement()" />
+                    <span class="quantity-text" id="quantity-text">1</span>
+                    <img src="./png/plus.png" class="quantity-img" onclick="increment()" />
+                </div>
             </div>
+            <p class="quantity-total" id="quantity-total">Quantity : 1</p>
         </div>
         <button type="button" class="btn-buy">Buy Now</button>
-
     </div>
-</body>
 
+    <script>
+        const quantityText = document.getElementById('quantity-text');
+        const quantityTotal = document.getElementById('quantity-total');
+        const productPrice = document.getElementById('product-price');
+
+        function increment() {
+            let quantity = parseInt(quantityText.innerText);
+
+            if (quantity < 10) {
+                quantityText.innerText = ++quantity;
+            }
+            else {
+                alert("You can't buy more than 10 products");
+            }
+            setQuantityandToatal(quantity);
+        }
+
+        function decrement() {
+            let quantity = parseInt(quantityText.innerText);
+
+            if (quantity > 1) {
+                quantityText.innerText = --quantity;
+            }
+            else {
+                alert("Buy minimum 1 product");
+            }
+            setQuantityandToatal(quantity);
+        }
+
+        function setQuantityandToatal(quantity) {
+            quantityTotal.innerText = `Quantity : ${quantity}`;
+            productPrice.innerText = `₹ ${450 * quantity}`;
+        }
+    </script>
+</body>
 </html>
